# realtime-ai-agent-aws

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/agents/: agentic-platform-developer.agent.md  pr-review-fixer.agent.md
.marscode/: deviceInfo.json
infra/: agent_management_stack.py  auth_stack.py  cache_stack.py  config.py  database_stack.py  events_stack.py  foundation_stack.py  task_processing_stack.py
runtime/agent/: __init__.py  agent_config.py  capabilities.py  tool_registry.py
runtime/auth/: api_key_authorizer.py  jwt_authorizer.py  middleware.py
runtime/handlers/: __init__.py  agent_management.py  task_processing.py
runtime/repositories/: __init__.py  agent_repository.py  base_repository.py  connection_repository.py  context_repository.py  task_repository.py
runtime/shared/: cache_service.py  config.py  constants.py  event_publisher.py  llm_provider.py  secrets.py
specs/: design.md  requirements.md  tasks.md
tests/property/: test_repositories.py
tests/unit/: test_agent_config.py  test_agent_management.py  test_agent_management_stack.py  test_api_key_authorizer.py  test_auth_middleware.py  test_auth_stack.py  test_cache_service.py  test_cache_stack.py  test_capabilities.py  test_config.py  test_constants.py  test_database_stack.py  test_event_publisher.py  test_events_stack.py  test_foundation_stack.py  test_jwt_authorizer.py  test_llm_provider.py  test_runtime_config.py  test_secrets.py  test_task_processing.py  test_task_processing_stack.py  test_tool_registry.py
